--- a/server-files/public/index.html
+++ b/server-files/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <title>React Notes</title>
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
   </head>
   <body>
-    <section>
+    <section class="container-fluid" id="jumbo">
       <div class="container">
         <div class="row">
           <div class="col-sm-4 col-sm-offset-4 text-center">
