--- a/server-files/public/index.html
+++ b/server-files/public/index.html
@@ -4,23 +4,24 @@
     <meta charset="utf-8"/>
     <title>React Notes</title>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   </head>
   <body>
     <section class="container-fluid" id="jumbo">
       <div class="container">
         <div class="row">
-          <div class="col-sm-4 col-sm-offset-4 text-center">
+          <div class="col s4 offset-s4 text-center">
             <h3>Notes</h3>
             <hr/>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6" id="notes"></div>
-          <div class="col-sm-5" id="form"></div>
+          <div class="col s6" id="notes"></div>
+          <div class="col s5" id="form"></div>
         </div>
       </div>
     </section>
     <script src="bundle.js"></script>
+    <script src="https://use.fontawesome.com/7e88be5386.js"></script>
   </body>
 </html>
